# saorsa-robotics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  WORKSHOP_PLAN_V1.md  pyproject.toml
.github/workflows/: ci.yml
apps/brain-daemon/: Cargo.toml
apps/kyutai-stt-app/: Cargo.toml
apps/safety-demo/: Cargo.toml
apps/sr-cli/: Cargo.toml
apps/vla-policy-demo/: Cargo.toml
apps/vla-policy-demo/src/: main.rs
apps/voice-demo/: Cargo.toml
archive/python-so101/: README.md
configs/devices/: odrive_axis.yaml  tmotor_ak80_9.yaml
crates/can-transport/: Cargo.toml
crates/continual-learning/: Cargo.toml
crates/device-registry/: Cargo.toml
crates/intent-parser/: Cargo.toml
crates/safety-guard/: Cargo.toml
crates/vision-stereo/: Cargo.toml
crates/vla-policy/: Cargo.toml
crates/voice-local/: Cargo.toml
docs/: CAMERA_SETUP.md  CAN.md  DEVICES.md  README.md  RESEARCH.md  SPEC.md  TASKS.md  VISION.md  VLA_INTEGRATION.md  VOICE.md
docs/research/: WALL_OSS_MODEL_CARDS_SUMMARY.md  X2ROBOT_DEPTH_MANIPULATION.md  X2ROBOT_WALL_OSS_SUMMARY.md
docs/runbooks/: SO-101-Depth-Pick.md
examples/: vla_policy_demo.rs  wake_word_demo.rs
ops/: README.md
policy_server/: openvla_policy.py  serve_pi0_fast.sh  vla_server.py
policy_server/rewarder/: app.py  requirements.txt  run.sh
rl/: run_hilserl.sh
rl/configs/: pick_place_red_to_blue.yaml
robot/: camera_manager.py  run_robot_client.sh
scripts/: bootstrap_gpu.sh  bootstrap_mac.sh  calibrate_cameras.py  check_mps.py  collect_demonstrations.py  run_vla_robot.py
(+90 files in other folders)
