[package]
name = "vla-policy-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
vla-policy = { path = "../../crates/vla-policy", features = ["mock"] }